--- a/TODO
+++ b/TODO
@@ -12,13 +12,18 @@
 	[x] Filter by score
 	[x] Redundancy check (persistent storage? https://github.com/simonlast/node-persist)
 
+	Heroku's read-only filesystem: https://devcenter.heroku.com/articles/read-only-filesystem
+
 [ ] Put code in a loop
 	[ ] Figure out how to call API 'responsibly' (rate limiting/how often should I poll?)
 	[ ] Figure out how to monitor this loop
+	[ ] Safely stop the loop when desired
+			http://stackoverflow.com/questions/14372288/how-to-properly-handle-sigint-with-express-js
 	
 	http://mcavage.me/node-restify/#client-api ?
 	http://nodejs.org/api/timers.html#timers_setinterval_callback_delay_arg ?
 	http://techoctave.com/c7/posts/60-simple-long-polling-example-with-javascript-and-jquery ?
+	SetInterval vs SetTimeout (awesome post) http://stackoverflow.com/a/731625
 
 [ ] Hook up mobile notifications with Instapush
 	https://instapush.im/
